--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <a name="top" />
+
 <div>
     <form>
 
@@ -44,6 +47,147 @@
 
     </form>
 
+        <form>
+
+        <input type="email" placerholder="type here..." name="email" />
+
+        <br /><br />
+
+        <textarea>My content goes here</textarea>
+
+        <br /><br />
+
+        <select>
+            <option>Select an option...</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>  
+        </select>
+
+        <br /><br />
+
+        <input type="radio" name="options" /> Red
+        <input type="radio" name="options" /> Green
+
+        <br /><br />
+
+        <input type="checkbox" name="dog" value="1"/> Dog
+        <input type="checkbox" /> Cat
+        <input type="checkbox" /> Fish
+
+        <br /><br />
+
+        <input type="submit" value="Click Me!" />
+
+    </form>
+
+        <form>
+
+        <input type="email" placerholder="type here..." name="email" />
+
+        <br /><br />
+
+        <textarea>My content goes here</textarea>
+
+        <br /><br />
+
+        <select>
+            <option>Select an option...</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>  
+        </select>
+
+        <br /><br />
+
+        <input type="radio" name="options" /> Red
+        <input type="radio" name="options" /> Green
+
+        <br /><br />
+
+        <input type="checkbox" name="dog" value="1"/> Dog
+        <input type="checkbox" /> Cat
+        <input type="checkbox" /> Fish
+
+        <br /><br />
+
+        <input type="submit" value="Click Me!" />
+
+    </form>
+
+        <form>
+
+        <input type="email" placerholder="type here..." name="email" />
+
+        <br /><br />
+
+        <textarea>My content goes here</textarea>
+
+        <br /><br />
+
+        <select>
+            <option>Select an option...</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>  
+        </select>
+
+        <br /><br />
+
+        <input type="radio" name="options" /> Red
+        <input type="radio" name="options" /> Green
+
+        <br /><br />
+
+        <input type="checkbox" name="dog" value="1"/> Dog
+        <input type="checkbox" /> Cat
+        <input type="checkbox" /> Fish
+
+        <br /><br />
+
+        <input type="submit" value="Click Me!" />
+
+    </form>
+
+        <form>
+
+        <input type="email" placerholder="type here..." name="email" />
+
+        <br /><br />
+
+        <textarea>My content goes here</textarea>
+
+        <br /><br />
+
+        <select>
+            <option>Select an option...</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>  
+        </select>
+
+        <br /><br />
+
+        <input type="radio" name="options" /> Red
+        <input type="radio" name="options" /> Green
+
+        <br /><br />
+
+        <input type="checkbox" name="dog" value="1"/> Dog
+        <input type="checkbox" /> Cat
+        <input type="checkbox" /> Fish
+
+        <br /><br />
+
+        <input type="submit" value="Click Me!" />
+
+    </form>
+
+    <p><a href="http://www.google.com">Google</a></p>
+
+    <p><a href="helloworld.html">Hello world</a></p>
+
+    <p><a href="#top">Back to top</p>
 
 </div>
 </body>
