Adding table data
Cool

--- a/index.html
+++ b/index.html
@@ -187,7 +187,14 @@
 
     <p><a href="helloworld.html">Hello world</a></p>
 
-    <p><a href="#top">Back to top</p>
+    <p><a href="#top">Back to top</a></p>
+
+    <table>
+        <tr><th>Names</th><th>Age</th><th>Gender</th></tr>
+        <tr><td>Rob</td><td>33</td><td>Male</td></tr>
+        <tr><td>Kirsten</td><td>34</td><td>Female</td></tr>
+        <tr><td>Tom</td><td>3</td><td>Male</td></tr>
+    </table>
 
 </div>
 </body>
